<project>

  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.unimaas.bigcat.wikipathways.curator</groupId>
  <artifactId>wikipathways.curator</artifactId>
  <version>1-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>4.8.1</junit.version>
  </properties>

  <repositories>
    <repository>
      <id>apache-repo-releases</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </repository>
  </repositories>
  
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>apache-jena-libs</artifactId>
      <version>2.11.0</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.0-alpha4</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.4.3</version>
        <configuration>
          <reportsDirectory>${project.build.directory}/${report.directory}</reportsDirectory>
          <forkCount>0</forkCount>
          <parallel>none</parallel>
          <argLine>-Xms512m -Xmx1G -XX:MaxPermSize=256m -DSUBSETPREFIX=${SUBSETPREFIX}</argLine>
          <includes>
            <include>**/*.java</include>
          </includes>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
